Bump crysknife to 0.10, update dependencies and remove commons-io/commons-text
Replace commons-io and commons-text with standard Java APIs. Update
Maven plugin versions, jsoup, javaparser, mockito, jlessc, and
processors to latest. Bump j2cl.platform to 20260527-1.

Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>